--- a/web/app/javascript/stylesheets/_utils.scss
+++ b/web/app/javascript/stylesheets/_utils.scss
@@ -115,6 +115,6 @@
 .text-with-html {
 
   & a {
-    @apply text-green-500 underline font-semibold;
+    @apply text-brand-500 underline font-semibold;
   }
 }
