--- a/web/app/javascript/stylesheets/_variables.scss
+++ b/web/app/javascript/stylesheets/_variables.scss
@@ -7,9 +7,9 @@ $animation-time-large: 350ms;
 $animation-time-medium: 150ms;
 $animation-time-small: 100ms;
 
-$brand-color: #03994C;
-$brand-color-aa: darken(#03994C, 5%);
-$brand-color-aaa: darken(#03994C, 10%);
+$brand-color: #6369D1;
+$brand-color-aa: darken(#6369D1, 5%);
+$brand-color-aaa: darken(#6369D1, 10%);
 $brand-color-complementary: #993127;
 $brand-color-high-contrast: #0C0F0A;
 
