--- a/web/app/views/events/_form.html.erb
+++ b/web/app/views/events/_form.html.erb
@@ -93,7 +93,7 @@
 
 		<div class="flex gap-2 inline-block justify-end w-full">
 			<%= link_to 'Exluir', @event, method: :delete, data: { confirm: 'Destruir evento' }, class: 'bg-gray-100 font-semibold px-5 py-2 rounded text-gray-500' %>
-			<button class="bg-green-500 font-semibold px-5 py-2 rounded text-white">
+			<button class="bg-brand-500 font-semibold px-5 py-2 rounded text-white">
 				Salvar
 			</button>
 		</div>
