--- a/web/app/views/feeds/category.html.erb
+++ b/web/app/views/feeds/category.html.erb
@@ -58,7 +58,7 @@
 	<% end %>
 
 	<div data-controller="install" class="select-none tap-highlight-none bottom-20 fixed transform transition-transform translate-y-32 w-full z-30">
-		<div data-action="click->install#install" data-install-target="button" class="bg-green-500 bg-white font-bold mx-auto px-5 py-3 rounded-full shadow-lg text-white w-content">
+		<div data-action="click->install#install" data-install-target="button" class="bg-brand-500 bg-white font-bold mx-auto px-5 py-3 rounded-full shadow-lg text-white w-content">
 			Instalar aplicativo
 		</div>
 	</div>
