--- a/web/app/views/layouts/_footer.html.erb
+++ b/web/app/views/layouts/_footer.html.erb
@@ -9,7 +9,7 @@
 	<% end %>
 
 
-	<div class="font-semibold text-green-600">
+	<div class="font-semibold text-brand-600">
 		<a href="#">oi@alegreme.com</a>
 	</div>
 	<div class="flex-wrap inline-flex items-center justify-center">
