--- a/web/app/views/organizers/show.html.erb
+++ b/web/app/views/organizers/show.html.erb
@@ -24,7 +24,7 @@
 				onerror: "this.style.opacity='0'"
 			} if @organizer.image_data? %>
 			<div>
-				<div class="flex-1 text-2xl font-bold leading-6 text-gray-600 group-hover:text-green-500 md:leading-normal md:pl-0 md:text-4xl">
+				<div class="flex-1 text-2xl font-bold leading-6 text-gray-600 group-hover:text-brand-500 md:leading-normal md:pl-0 md:text-4xl">
 					<%= @organizer.details_name %>
 				</div>
 			</div>
