--- a/web/app/views/users/admin/index.html.erb
+++ b/web/app/views/users/admin/index.html.erb
@@ -66,7 +66,7 @@
 								</td>
 								<td class="px-6 py-4 whitespace-nowrap">
 									<% if user.swipable['events']['finished_at'] %>
-										<span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-green-100 text-green-800">
+										<span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-brand-100 text-brand-800">
                   		Completo
                 		</span>
 									<% else %>
