--- a/web/app/components/hero/card_event_component.html.erb
+++ b/web/app/components/hero/card_event_component.html.erb
@@ -16,7 +16,7 @@
         <%= reflex_tag :like, :div, class: 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-600 items-center justify-center mdc-ripple-upgraded--unbounded rounded-full select-none tap-highlight-none text-gray-600 text-sm transform transition-transform' do %>
           <svg class="<%= helpers.class_names 'fill-current h-5 hover:scale-150 w-5',
                                               {'text-gray-600':  !@user&.like?(@event),
-                                               'text-green-500': @user&.like?(@event)} %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                               'text-brand-500': @user&.like?(@event)} %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M0 0h24v24H0V0z" fill="none" opacity=".87"/>
             <path d="M13.12 2.06L7.58 7.6c-.37.37-.58.88-.58 1.41V19c0 1.1.9 2 2 2h9c.8 0 1.52-.48 1.84-1.21l3.26-7.61C23.94 10.2 22.49 8 20.34 8h-5.65l.95-4.58c.1-.5-.05-1.01-.41-1.37-.59-.58-1.53-.58-2.11.01zM3 21c1.1 0 2-.9 2-2v-8c0-1.1-.9-2-2-2s-2 .9-2 2v8c0 1.1.9 2 2 2z"/>
           </svg>
@@ -31,7 +31,7 @@
         <% end %>
       </div>
       <div>
-        <%= link_to helpers.limit_name_size(@event.details_name), event_path(@event), class: 'font-medium group-hover:text-green-500 inline-block mt-1 text-base text-gray-800', data: {target: 'event.name'} %>
+        <%= link_to helpers.limit_name_size(@event.details_name), event_path(@event), class: 'font-medium group-hover:text-brand-500 inline-block mt-1 text-base text-gray-800', data: {target: 'event.name'} %>
         <span class=" inline-block leading-snug mt-1 text-gray-600 text-sm">
 				<%= "#{I18n.l(@event.first_day_time.to_date, format: :week).titlecase} #{helpers.format_hour @event.first_day_time} · #{helpers.time_until @event}" %>
           em <%= helpers.limit_place_name_size(@event.place_details_name, 20) %>
