--- a/web/app/components/hero/swipable_component.html.erb
+++ b/web/app/components/hero/swipable_component.html.erb
@@ -7,12 +7,12 @@
 				<% if current_stage == :train %>
 					<div data-swipable-target="items">
 						<div class="mb-5">
-							<div class="font-black text-xl">
-								Quais tipos de evento você curte?
+							<div class="font-bold font-display text-gray-900 text-2xl md:text-3xl">
+								Que eventos você curte?
 							</div>
 							<div class="text-xs md:text-sm text-gray-500 w-10/12 md:w-8/12">
 								Para receber sugestões personalizadas, indique ao menos
-								<span class="text-green-500 font-bold"><%= @min_events_to_train - events_trained %> eventos</span>
+								<span class="text-brand-500 font-bold"><%= @min_events_to_train - events_trained %> eventos</span>
 								que você curte.
 							</div>
 						</div>
@@ -24,7 +24,7 @@
 									<%= render Hero::TrainEventComponent.with_collection(@events_to_train, user: @user, open_in_sidebar: true) %>
 								</div>
 								<div
-									class="flex font-bold items-center text-green-500 text-md text-xl hidden"
+									class="flex font-bold items-center text-brand-500 text-md text-2xl hidden"
 									data-toggle-loader-target="on">
 									Carregando
 									<svg data-toggle-loader-target="onIcon" class="w-5 h-5 ml-2 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -37,23 +37,23 @@
 					</div>
 				<% end %>
 				<% if current_stage == :end_train_message %>
-					<div class="bg-green-50 flex flex-col h-full items-center justify-center my-auto p-5 rounded-xl space-y-5 text-center">
-						<div id="end-message-title" class="px-5 text-green-700">
+					<div class="bg-brand-100 flex flex-col h-full items-center justify-center my-auto p-5 rounded-xl space-y-5 text-center">
+						<div id="end-message-title" class="px-5 text-brand-700">
 							<div class="font-bold"><%= "Obrigado #{@user.first_name}!" %></div>
 							<div class="font-light">Agora já consigo recomendar eventos parecidos com seu gosto pessoal.</div>
 						</div>
-						<%= content_tag :div, data: { reflex: 'click->Train#hide_train' }, class: 'px-4 py-3 md:py-2 font-semibold text-white bg-green-500 rounded-full cursor-pointer hover:bg-green-600' do %>
+						<%= content_tag :div, data: { reflex: 'click->Train#hide_train' }, class: 'px-4 py-3 md:py-2 font-semibold text-white bg-brand-500 rounded-full cursor-pointer hover:bg-brand-600' do %>
 							Ver recomendações
 						<% end %>
 					</div>
 				<% end %>
 				<% if current_stage == :suggestions %>
 					<div class="mb-5">
-						<div class="font-black text-xl">
-							Indicados para você
-						</div>
-						<div class="text-xs md:text-sm text-gray-500">
-							Com base nos eventos que você curtiu
+<!--						<div class="text-xs md:text-sm text-gray-400">-->
+<!--							Com base nos eventos que você curtiu-->
+<!--						</div>-->
+						<div class="font-bold font-display text-gray-900 text-2xl md:text-3xl">
+							Indicado para você
 						</div>
 					</div>
 					<div id="suggestion-events" class="">
@@ -61,11 +61,11 @@
 					</div>
 				<% end %>
 				<% if current_stage == :end_suggestions_message %>
-					<div class="bg-green-50 flex flex-col h-full items-center justify-center my-auto p-5 rounded-xl space-y-5 text-center text-gray-800">
+					<div class="bg-brand-100 flex flex-col h-full items-center justify-center my-auto p-5 rounded-xl space-y-5 text-center text-gray-800">
 						<div id="end-message-title" class="font-semibold px-5 text-gray-600">
 							<%= "Você já viu todas as recomendações que eu tinha para você hoje 😃" %>
 						</div>
-						<%= content_tag :div, data: { reflex: 'click->Swipable#hide_swipable' }, class: 'px-4 py-2 font-semibold text-white bg-green-500 rounded-full cursor-pointer' do %>
+						<%= content_tag :div, data: { reflex: 'click->Swipable#hide_swipable' }, class: 'px-4 py-2 font-semibold text-white bg-brand-500 rounded-full cursor-pointer' do %>
 							Ok, fechar
 						<% end %>
 					</div>
