--- a/web/app/components/left_sidebar/calendar_component.html.erb
+++ b/web/app/components/left_sidebar/calendar_component.html.erb
@@ -1,19 +1,19 @@
 <%= content_tag :div, id: 'calendar', data: { controller: 'left-sidebar--calendar' }, class: 'h-full' do %>
 	<div class="h-full">
-		<div data-calendar-target="calendar" class="calendar select-none tap-highlight-none bg-white mb-5 md:mb-2 md:py-5 md:rounded-lg md:text-center pl-2 pr-5 rounded-lg text-center">
+		<div data-calendar-target="calendar" class="calendar select-none tap-highlight-none bg-white mb-5 md:mb-2 md:py-5 md:rounded-lg md:text-center pr-5 rounded-lg text-center">
 			<div class="capitalize flex font-medium items-center justify-between pb-5 rounded-t-lg text-gray-500">
-				<span class="font-extrabold ml-2 mr-2">
+				<span class="font-bold font-display text-gray-800 mr-2">
 					<%= t('date.month_names')[start_date.month] %> <%= start_date.year %>
 				</span>
-				<div class="-mr-1 flex">
-					<%= content_tag :div, id: 'calendar-previous', data: { reflex: 'click->LeftSidebar::Calendar#prev_month', start_date: start_date }, class: 'mx-1 cursor-pointer md:hover:bg-green-500 md:hover:text-white h-8 w-8 rounded-full flex justify-center items-center' do %>
+				<div class="mr-2 flex">
+					<%= content_tag :div, id: 'calendar-previous', data: { reflex: 'click->LeftSidebar::Calendar#prev_month', start_date: start_date }, class: 'mx-1 cursor-pointer md:hover:bg-brand-500 md:hover:text-white h-8 w-8 rounded-full flex justify-center items-center' do %>
 						<svg class="h-6 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 							<path d="M0 0h24v24H0z" fill="none"/>
 							<path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
 						</svg>
 					<% end %>
 
-					<%= content_tag :div, id: 'calendar-next', data: { reflex: 'click->LeftSidebar::Calendar#next_month', start_date: start_date }, class: 'mx-1 cursor-pointer md:hover:bg-green-500 md:hover:text-white h-8 w-8 rounded-full flex justify-center items-center' do %>
+					<%= content_tag :div, id: 'calendar-next', data: { reflex: 'click->LeftSidebar::Calendar#next_month', start_date: start_date }, class: 'mx-1 cursor-pointer md:hover:bg-brand-500 md:hover:text-white h-8 w-8 rounded-full flex justify-center items-center' do %>
 						<svg class="h-6 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 							<path d="M0 0h24v24H0z" fill="none"/>
 							<path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/>
@@ -22,11 +22,11 @@
 				</div>
 			</div>
 
-			<table class="table-auto w-full">
+			<table class="table-auto w-full md:-ml-2">
 				<thead>
 				<tr>
 					<% date_range.slice(0, 7).each do |day| %>
-						<th class="pb-2 text-gray-400 uppercase text-xs font-medium"><%= t('date.abbr_day_names')[day.wday] %></th>
+						<th class="pb-2 text-gray-500 uppercase text-xs"><%= t('date.abbr_day_names')[day.wday] %></th>
 					<% end %>
 				</tr>
 				</thead>
@@ -41,7 +41,7 @@
 									<%= day.strftime '%e' %>
 								<% end %>
 								<div data-indicator class="<%= helpers.class_names 'h-1 mx-auto rounded-full transform translate-y-1 w-1',
-																																	 'bg-green-500': day.to_date != start_date.to_date || start_date.to_date == Date.today,
+																																	 'bg-brand-500': day.to_date != start_date.to_date || start_date.to_date == Date.today,
 																																	 'bg-white':     day.to_date == start_date.to_date && @filter,
 																																	 'hidden':       !@indicators&.include?(day) %>">
 								</div>
@@ -55,7 +55,7 @@
 
 
 		<div id="calendar__list" style="<%= helpers.class_names 'hidden': @events&.empty? %>">
-			<div class="<%= helpers.class_names('mt-3 flex items-center px-2 py-1 mx-auto text-sm font-semibold text-white bg-green-500 rounded-full select-none w-content',
+			<div class="<%= helpers.class_names('mt-3 flex items-center px-2 py-1 mx-auto text-sm font-semibold text-white bg-brand-500 rounded-full select-none w-content',
 																					'hidden': !@filter) %>">
 				<svg class="h-5 mr-2 text-white fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 					<path d="M0 0h24v24H0z" fill="none"/>
@@ -88,7 +88,7 @@
 			</div>
 		<% elsif !@user %>
 			<div class="p-2 my-6 mt-3 text-sm text-center text-gray-600 rounded-lg bg-gray-50">
-				<%= link_to 'Crie uma conta', new_user_registration_path, data: { 'gtm-action': 'click', 'gtm-category': 'Funil', 'gtm-label': 'Criar meu perfil' }, class: 'underline text-green-500 hover:text-gray-600' %>
+				<%= link_to 'Crie uma conta', new_user_registration_path, data: { 'gtm-action': 'click', 'gtm-category': 'Funil', 'gtm-label': 'Criar meu perfil' }, class: 'underline text-brand-500 hover:text-gray-600' %>
 				para salvar seus eventos favoritos
 			</div>
 		<% end %></div>
