--- a/web/app/components/main_sidebar/group_by_day_list_component.html.erb
+++ b/web/app/components/main_sidebar/group_by_day_list_component.html.erb
@@ -1,21 +1,21 @@
 <div class="md:px-5 pl-3">
 	<% @events.group_by { |e| e.first_day_time.to_date.strftime("%Y-%m-%d") }.each do |group| %>
 		<div id="<%= "main-sidebar--group-#{group[0]}" %>" class="border-gray-300 border-l ml-3 pb-10 relative">
-			<div class="<%= helpers.class_names('bg-white flex-1 leading-6 md:bg-white md:leading-normal md:pb-2 md:px-5 pb-3 pl-5 pt-2 sticky text-gray-600 z-10',
+			<div class="<%= helpers.class_names('bg-white flex-1 leading-6 md:bg-white md:leading-normal md:pb-2 md:px-5 pb-3 pl-5 pt-2 md:pt-7 sticky text-gray-600 z-10',
 																					{ 'top-0':  helpers.mobile_device?,
 																						'top-12': helpers.mobile_device? && current_page?('/minha-agenda'),
 																						'top-16': !helpers.mobile_device? }) %>">
-				<div class="-ml-2 absolute bg-green-500 border-4 border-white h-4 left-0 rounded-full w-4 z-20"></div>
+				<div class="-ml-2 absolute bg-brand-500 border-4 border-white h-4 left-0 rounded-full w-4 z-20"></div>
 				<div class="space-x-2 flex items-baseline text-xs">
-					<h2 class="font-extrabold text-gray-500 uppercase">
+					<h2 class="font-semibold text-brand-500 uppercase">
 						<%= helpers.day_of_week(group[0].to_date).titlecase %>
 					</h2>
 					<% if group[0].to_date == Date.today || group[0].to_date == Date.tomorrow %>
-						<div class="text-gray-500"><%= "#{I18n.l(group[0].to_date, format: :week)} · #{I18n.l(group[0].to_date, format: :long)}" %></div>
+						<div class="text-gray-500 capitalize"><%= "#{I18n.l(group[0].to_date, format: :week)} · #{I18n.l(group[0].to_date, format: :long)}" %></div>
 					<% elsif group[0].to_date < Date.today + 7 %>
-						<div class="text-gray-500"><%= "#{I18n.l(group[0].to_date, format: :long)}" %></div>
+						<div class="text-gray-500 capitalize"><%= "#{I18n.l(group[0].to_date, format: :long)}" %></div>
 					<% else %>
-						<div class="text-gray-500">daqui <%= distance_of_time_in_words group[0].to_date, DateTime.now %></div>
+						<div class="text-gray-500 capitalize">daqui <%= distance_of_time_in_words group[0].to_date, DateTime.now %></div>
 					<% end %>
 				</div>
 			</div>
