--- a/web/app/components/main_sidebar/horizontal_event_component.html.erb
+++ b/web/app/components/main_sidebar/horizontal_event_component.html.erb
@@ -1,10 +1,6 @@
 <%= content_tag :div, id: dom_id(@event, :'main-sidebar'), data: { controller: 'main-sidebar--horizontal-event', 'main-sidebar--horizontal-event-open-in-sidebar': @open_in_sidebar }, class: '' do %>
 	<div class="select-none tap-highlight-none bg-white flex justify-between mx-2 md:mx-0 px-3 md:px-5 py-3 rounded-lg">
 		<div class="pr-5 md:pr-6">
-			<div class="mb-1 text-sm md:text-xs text-gray-500">
-				<%= helpers.format_hour @event.first_day_time %>h ·
-				<%= @event.categories_primary_name.titleize %>
-			</div>
 			<%= content_tag :a,
 											href:  event_path(@event),
 											data:  {
@@ -12,13 +8,15 @@
 												action:                  'click->main-sidebar--horizontal-event#openEvent',
 												'event-id':              @event.id
 											},
-											class: 'font-bold md:hover:underline mb-1 leading-snug text-gray-700 inline-block' do %>
+											class: 'font-semibold md:hover:underline mb-1 leading-snug text-gray-800 inline-block' do %>
 				<%= @event.details_name %>
 			<% end %>
 			<div class="text-sm md:text-xs md:mt-1 text-gray-500">
+				<%= helpers.format_hour @event.first_day_time %>h ·
+				<%= @event.categories_primary_name.titleize %> ·
 				<%= link_to helpers.limit_place_name_size(@event.place_details_name, 24), place_path(@event.place), class: 'md:hover:underline' %>
 			</div>
-			<div class="flex mt-1 -ml-2">
+			<div class="flex mt-1 mt-3 space-x-2">
 				<%= content_tag :div,
 												id:    dom_id(@event, :like),
 												data:  {
@@ -26,12 +24,14 @@
 													'event-id': @event.id,
 													component:  'horizontal-event'
 												},
-												class: 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-600 items-center justify-center rounded-full select-none tap-highlight-none text-sm transform transition-transform' do %>
-					<svg class="<%= helpers.class_names 'fill-current h-5 hover:scale-150 w-5',
+												class: 'cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-600 items-center justify-center rounded-full select-none tap-highlight-none text-sm transform transition-transform' do %>
+					<svg class="<%= helpers.class_names 'h-5 hover:scale-150 w-5',
 																							{ 'text-gray-300 hover:text-gray-400': !@user&.like?(@event),
-																								'text-green-500':                    @user&.like?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-						<path d="M0 0h24v24H0V0z" fill="none" opacity=".87"/>
-						<path d="M13.12 2.06L7.58 7.6c-.37.37-.58.88-.58 1.41V19c0 1.1.9 2 2 2h9c.8 0 1.52-.48 1.84-1.21l3.26-7.61C23.94 10.2 22.49 8 20.34 8h-5.65l.95-4.58c.1-.5-.05-1.01-.41-1.37-.59-.58-1.53-.58-2.11.01zM3 21c1.1 0 2-.9 2-2v-8c0-1.1-.9-2-2-2s-2 .9-2 2v8c0 1.1.9 2 2 2z"/>
+																								'text-green-500':                    @user&.like?(@event) } %>" viewBox="0 0 53 53" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M49.9974 26.4C49.9974 39.3235 39.4767 49.8 26.4987 49.8C13.5207 49.8 3 39.3235 3 26.4C3 13.4765 13.5207 3 26.4987 3C39.4767 3 49.9974 13.4765 49.9974 26.4Z" stroke-width="5" class="stroke-current"></path>
+						<path d="M21.6848 20.6999C21.6848 22.8538 19.93 24.5999 17.7652 24.5999C15.6005 24.5999 13.8456 22.8538 13.8456 20.6999C13.8456 18.546 15.6005 16.7999 17.7652 16.7999C19.93 16.7999 21.6848 18.546 21.6848 20.6999Z" class="fill-current"></path>
+						<path d="M39.1519 20.6999C39.1519 22.8538 37.397 24.5999 35.2323 24.5999C33.0675 24.5999 31.3126 22.8538 31.3126 20.6999C31.3126 18.546 33.0675 16.7999 35.2323 16.7999C37.397 16.7999 39.1519 18.546 39.1519 20.6999Z" class="fill-current"></path>
+						<path fill-rule="evenodd" clip-rule="evenodd" d="M14.4481 32.6537C14.4476 32.6526 14.4471 32.6516 16.738 31.525C19.0289 30.3984 19.0284 30.3974 19.0279 30.3964L19.0269 30.3946L19.0252 30.3912L19.0226 30.3861L19.0204 30.3819C19.0203 30.3817 19.023 30.3868 19.0284 30.3966C19.0392 30.4164 19.061 30.4554 19.0939 30.5108C19.1598 30.622 19.2693 30.7975 19.4235 31.0159C19.7342 31.4559 20.2125 32.0505 20.865 32.6428C22.1567 33.8155 24.0793 34.9436 26.8 34.9436C29.5207 34.9436 31.4433 33.8155 32.735 32.6428C33.3875 32.0505 33.8658 31.4559 34.1765 31.0159C34.3307 30.7975 34.4402 30.622 34.5062 30.5108C34.5391 30.4554 34.5608 30.4164 34.5717 30.3966C34.5771 30.3868 34.5797 30.3817 34.5796 30.3819L34.5774 30.3861L34.5748 30.3912L34.5731 30.3946L34.5721 30.3964C34.5716 30.3974 34.5711 30.3984 36.862 31.525C39.153 32.6516 39.1524 32.6526 39.1519 32.6537L39.1507 32.656L39.1482 32.6609L39.1422 32.6725C39.1379 32.6809 39.1327 32.6908 39.1267 32.7022C39.1148 32.7248 39.0996 32.7531 39.0812 32.7867C39.0444 32.8539 38.9944 32.9425 38.931 33.0494C38.8044 33.263 38.623 33.5514 38.3841 33.8897C37.9087 34.5629 37.1922 35.4529 36.2096 36.3449C34.2311 38.1412 31.1227 39.9819 26.8 39.9819C22.4773 39.9819 19.3689 38.1412 17.3904 36.3449C16.4078 35.4529 15.6913 34.5629 15.2159 33.8897C14.977 33.5514 14.7957 33.263 14.669 33.0494C14.6056 32.9425 14.5557 32.8539 14.5188 32.7867C14.5004 32.7531 14.4852 32.7248 14.4733 32.7022C14.4673 32.6908 14.4622 32.6809 14.4578 32.6725L14.4518 32.6609L14.4493 32.656L14.4481 32.6537Z" class="fill-current"></path>
 					</svg>
 				<% end %>
 				<%= content_tag :div,
@@ -41,18 +41,20 @@
 													'event-id': @event.id,
 													component:  'horizontal-event'
 												},
-												class: 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-600 items-center justify-center rounded-full select-none tap-highlight-none text-sm transform transition-transform' do %>
-					<svg class="<%= helpers.class_names 'fill-current h-5 hover:scale-150 w-5',
+												class: 'cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-600 items-center justify-center rounded-full select-none tap-highlight-none text-sm transform transition-transform' do %>
+					<svg class="<%= helpers.class_names 'h-5 hover:scale-150 w-5',
 																							{ 'text-gray-300 hover:text-gray-400': !@user&.dislike?(@event),
-																								'text-red-500':                      @user&.dislike?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-						<path d="M0 0h24v24H0V0z" fill="none" opacity=".87"/>
-						<path d="M10.88 21.94l5.53-5.54c.37-.37.58-.88.58-1.41V5c0-1.1-.9-2-2-2H6c-.8 0-1.52.48-1.83 1.21L.91 11.82C.06 13.8 1.51 16 3.66 16h5.65l-.95 4.58c-.1.5.05 1.01.41 1.37.59.58 1.53.58 2.11-.01zM21 3c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2s2-.9 2-2V5c0-1.1-.9-2-2-2z"/>
+																								'text-red-500':                      @user&.dislike?(@event) } %>" viewBox="0 0 53 53" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M49.9974 26.4C49.9974 39.3235 39.4767 49.8 26.4987 49.8C13.5207 49.8 3 39.3235 3 26.4C3 13.4765 13.5207 3 26.4987 3C39.4767 3 49.9974 13.4765 49.9974 26.4Z" stroke-width="5" class="stroke-current"></path>
+						<path d="M21.6848 20.6999C21.6848 22.8538 19.93 24.5999 17.7652 24.5999C15.6005 24.5999 13.8456 22.8538 13.8456 20.6999C13.8456 18.546 15.6005 16.7999 17.7652 16.7999C19.93 16.7999 21.6848 18.546 21.6848 20.6999Z" class="fill-current"></path>
+						<path d="M39.1519 20.6999C39.1519 22.8538 37.397 24.5999 35.2323 24.5999C33.0675 24.5999 31.3126 22.8538 31.3126 20.6999C31.3126 18.546 33.0675 16.7999 35.2323 16.7999C37.397 16.7999 39.1519 18.546 39.1519 20.6999Z" class="fill-current"></path>
+						<path fill-rule="evenodd" clip-rule="evenodd" d="M39.1518 37.7101C39.1524 37.7111 39.1529 37.7122 36.862 38.8388C34.5711 39.9654 34.5716 39.9664 34.5721 39.9674L34.573 39.9692L34.5747 39.9725L34.5774 39.9777L34.5796 39.9819C34.5797 39.982 34.577 39.977 34.5716 39.9671C34.5608 39.9474 34.539 39.9084 34.5061 39.853C34.4402 39.7417 34.3307 39.5663 34.1765 39.3479C33.8658 38.9078 33.3874 38.3133 32.735 37.721C31.4433 36.5483 29.5207 35.4201 26.8 35.4201C24.0793 35.4201 22.1566 36.5483 20.865 37.721C20.2125 38.3133 19.7341 38.9078 19.4234 39.3479C19.2692 39.5663 19.1598 39.7417 19.0938 39.853C19.0609 39.9084 19.0391 39.9474 19.0283 39.9671C19.0229 39.977 19.0203 39.982 19.0204 39.9819L19.0225 39.9777L19.0252 39.9725L19.0269 39.9692L19.0278 39.9674C19.0283 39.9664 19.0288 39.9654 16.7379 38.8388C14.447 37.7122 14.4475 37.7111 14.4481 37.7101L14.4492 37.7078L14.4518 37.7029L14.4577 37.6913C14.4621 37.6828 14.4673 37.6729 14.4733 37.6616C14.4852 37.639 14.5004 37.6107 14.5188 37.577C14.5556 37.5098 14.6056 37.4212 14.669 37.3143C14.7956 37.1008 14.977 36.8124 15.2158 36.4741C15.6912 35.8008 16.4078 34.9109 17.3904 34.0188C19.3689 32.2226 22.4772 30.3819 26.8 30.3819C31.1227 30.3819 34.2311 32.2226 36.2096 34.0188C37.1922 34.9109 37.9087 35.8008 38.3841 36.4741C38.6229 36.8124 38.8043 37.1008 38.931 37.3143C38.9944 37.4212 39.0443 37.5098 39.0812 37.577C39.0996 37.6107 39.1147 37.639 39.1267 37.6616C39.1326 37.6729 39.1378 37.6828 39.1422 37.6913L39.1481 37.7029L39.1507 37.7078L39.1518 37.7101Z" class="fill-current"></path>
 					</svg>
 				<% end %>
 			</div>
 		</div>
 		<div>
-			<div data-controller="ripple" class="h-20 md:h-24 md:w-40 mt-3 overflow-hidden relative ripple ripple-white rounded-lg shadow w-32">
+			<div data-controller="ripple" class="h-20 md:h-24 md:w-40 overflow-hidden relative ripple ripple-white rounded-lg shadow w-32">
 				<%= link_to event_path(@event),
 										data: {
 											'turbo-preserve-scroll': true,
