--- a/web/app/javascript/stylesheets/components/me-calendar.scss
+++ b/web/app/javascript/stylesheets/components/me-calendar.scss
@@ -12,7 +12,7 @@
     @apply text-white;
 
     &::before {
-      @apply w-10 h-10 bg-green-500 absolute rounded-full z-0 text-white font-semibold;
+      @apply w-10 h-10 bg-brand-500 absolute rounded-full z-0 text-white font-semibold;
       content: close-quote;
     }
   }
