--- a/web/app/views/components/_bottom-navigation.html.erb
+++ b/web/app/views/components/_bottom-navigation.html.erb
@@ -3,7 +3,7 @@
 			 data-controller="ripple bottom-navigation go-to"
 			 data-go-to-delay="100"
 			 data-reflex-permanent
-			 data-toggle-style-active-class='["text-green-500"]'
+			 data-toggle-style-active-class='["text-brand-500"]'
 			 data-toggle-style-current-selected="<%= "#{controller_name}-#{action_name}" %>"
 			 data-toggle-style-inactive-class='["text-gray-600"]'
 			 data-toggle-style-init-selected="<%= "#{controller_name}-#{action_name}" %>">
@@ -13,12 +13,10 @@
 					 data-toggle-style-identifier="feeds-index"
 					 data-go-to-url="<%= feed_path %>"
 					 class="<%= class_names 'cursor-pointer md:flex-row md:font-semibold md:text-2xl antialiased flex flex-1 flex-col items-center transform transition-transform text-xs duration-100',
-																	'text-green-500': ['feeds', 'events'].include?(controller_name),
+																	'text-brand-500': ['feeds', 'events'].include?(controller_name),
 																	'text-gray-600':  !['feeds', 'events'].include?(controller_name) %>">
-				<svg class="w-5 h-5 md:mr-5" viewBox="0 0 53 53" fill="none" xmlns="http://www.w3.org/2000/svg">
-					<path class="stroke-current" d="M49.997 26.4c0 12.924-10.52 23.4-23.498 23.4C13.52 49.8 3 39.324 3 26.4 3 13.477 13.52 3 26.499 3c12.978 0 23.498 10.476 23.498 23.4z" stroke-width="5"/>
-					<path class="fill-current" d="M21.685 20.7c0 2.154-1.755 3.9-3.92 3.9s-3.92-1.746-3.92-3.9 1.755-3.9 3.92-3.9 3.92 1.746 3.92 3.9zM39.152 20.7c0 2.154-1.755 3.9-3.92 3.9-2.164 0-3.92-1.746-3.92-3.9s1.756-3.9 3.92-3.9c2.165 0 3.92 1.746 3.92 3.9z"/>
-					<path class="fill-current" fill-rule="evenodd" clip-rule="evenodd" d="M14.448 32.654c0-.001 0-.002 2.29-1.129s2.29-1.128 2.29-1.129l-.001-.001-.002-.004-.002-.005-.003-.004.008.015.066.114c.066.111.175.287.33.505.31.44.788 1.035 1.441 1.627 1.292 1.172 3.214 2.3 5.935 2.3 2.72 0 4.643-1.127 5.935-2.3a10.061 10.061 0 001.441-1.627 7.715 7.715 0 00.396-.62l.008-.014-.003.004-.002.005-.002.004v.001c-.001.001-.002.002 2.289 1.129s2.29 1.128 2.29 1.129l-.001.002-.003.005-.006.011a3.123 3.123 0 01-.06.115 12.646 12.646 0 01-.697 1.103 15.127 15.127 0 01-2.175 2.455c-1.979 1.796-5.087 3.637-9.41 3.637s-7.431-1.84-9.41-3.637a15.127 15.127 0 01-2.174-2.455 12.687 12.687 0 01-.697-1.103 5.984 5.984 0 01-.046-.085l-.015-.03-.006-.011-.003-.005v-.002z"/>
+				<svg class="fill-current h-5 md:mr-5" viewBox="0 0 20 17" xmlns="http://www.w3.org/2000/svg">
+					<path d="M10 2.69L15 7.19V15H13V9H7V15H5V7.19L10 2.69V2.69ZM10 0L0 9H3V17H9V11H11V17H17V9H20L10 0Z"/>
 				</svg>
 				Início
 			</div>
@@ -27,12 +25,12 @@
 					 data-toggle-style-identifier="users-agenda"
 					 data-go-to-url="<%= my_agenda_path %>"
 					 class="<%= class_names 'cursor-pointer md:flex-row md:font-semibold md:text-2xl antialiased flex flex-1 flex-col items-center transform transition-transform text-xs duration-100',
-																	'text-green-500': current_page?('/minha-agenda'),
+																	'text-brand-500': current_page?('/minha-agenda'),
 																	'text-gray-600':  !current_page?('/minha-agenda') %>">
-				<svg class="w-5 h-5 fill-current md:mr-5" viewBox="0 0 21 23" fill="none" xmlns="http://www.w3.org/2000/svg">
-					<path d="M16.0993 1.91826H17.0464C18.0881 1.91826 18.9404 2.78148 18.9404 3.83652V10.7046C18.8084 10.4392 18.6379 10.1883 18.4284 9.96057L18.4216 9.95314L18.4147 9.94577C18.0255 9.52995 17.5515 9.24444 17.0464 9.09236V6.71392H1.89404V19.1826H7.11898V20.9544C7.11898 21.0032 7.12002 21.0521 7.12209 21.1009H1.89404C0.852318 21.1009 0 20.2377 0 19.1826V3.83652C0 2.78148 0.852318 1.91826 1.89404 1.91826H2.84106V0H4.7351V1.91826H14.2053V0H16.0993V1.91826Z"/>
-					<path d="M11.5048 20.9544C11.5048 21.004 11.5017 21.0529 11.4958 21.1009C11.4294 21.6404 11.0013 22.06 10.4875 22.06C9.97367 22.06 9.54563 21.6404 9.47916 21.1009C9.47325 21.0529 9.4702 21.004 9.4702 20.9544C9.4702 20.9544 9.4702 20.9544 9.4702 20.9544V16.5318C9.4702 15.9237 9.92799 15.4261 10.4875 15.4261C11.047 15.4261 11.5048 15.9237 11.5048 16.5318V20.9544C11.5048 20.9544 11.5048 20.9544 11.5048 20.9544Z"/>
-					<path d="M12.5221 15.4316C12.5221 15.1386 12.6289 14.8567 12.8171 14.6522L15.635 11.5895C15.9301 11.2633 16.4082 11.2633 16.7083 11.584C16.8914 11.783 16.9677 12.0649 16.9168 12.3414L16.4336 14.8733H19.3075C20.4011 14.8733 21.1386 16.0895 20.7114 17.1841L19.0532 21.3911C18.8904 21.7946 18.5242 22.06 18.1172 22.06H13.5394C13.0256 22.06 12.5975 21.6404 12.5311 21.1009C12.5251 21.0529 12.5221 21.004 12.5221 20.9544C12.5221 20.9544 12.5221 20.9544 12.5221 20.9544V15.4316Z"/>
+				<svg class="w-5 h-5 md:mr-5" viewBox="0 0 53 53" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path class="stroke-current" d="M49.997 26.4c0 12.924-10.52 23.4-23.498 23.4C13.52 49.8 3 39.324 3 26.4 3 13.477 13.52 3 26.499 3c12.978 0 23.498 10.476 23.498 23.4z" stroke-width="5"/>
+					<path class="fill-current" d="M21.685 20.7c0 2.154-1.755 3.9-3.92 3.9s-3.92-1.746-3.92-3.9 1.755-3.9 3.92-3.9 3.92 1.746 3.92 3.9zM39.152 20.7c0 2.154-1.755 3.9-3.92 3.9-2.164 0-3.92-1.746-3.92-3.9s1.756-3.9 3.92-3.9c2.165 0 3.92 1.746 3.92 3.9z"/>
+					<path class="fill-current" fill-rule="evenodd" clip-rule="evenodd" d="M14.448 32.654c0-.001 0-.002 2.29-1.129s2.29-1.128 2.29-1.129l-.001-.001-.002-.004-.002-.005-.003-.004.008.015.066.114c.066.111.175.287.33.505.31.44.788 1.035 1.441 1.627 1.292 1.172 3.214 2.3 5.935 2.3 2.72 0 4.643-1.127 5.935-2.3a10.061 10.061 0 001.441-1.627 7.715 7.715 0 00.396-.62l.008-.014-.003.004-.002.005-.002.004v.001c-.001.001-.002.002 2.289 1.129s2.29 1.128 2.29 1.129l-.001.002-.003.005-.006.011a3.123 3.123 0 01-.06.115 12.646 12.646 0 01-.697 1.103 15.127 15.127 0 01-2.175 2.455c-1.979 1.796-5.087 3.637-9.41 3.637s-7.431-1.84-9.41-3.637a15.127 15.127 0 01-2.174-2.455 12.687 12.687 0 01-.697-1.103 5.984 5.984 0 01-.046-.085l-.015-.03-.006-.011-.003-.005v-.002z"/>
 				</svg>
 				Agenda
 			</div>
@@ -42,7 +40,7 @@
 						 data-toggle-style-identifier="users-profile"
 						 data-go-to-url="<%= current_user ? user_path(current_user) : new_user_registration_path %>"
 						 class="<%= class_names 'cursor-pointer md:flex-row md:font-semibold md:text-2xl antialiased flex flex-1 flex-col items-center transform transition-transform text-xs duration-100',
-																		'text-green-500': current_page?(controller: :users, action: :show, id: current_user),
+																		'text-brand-500': current_page?(controller: :users, action: :show, id: current_user),
 																		'text-gray-600':  !current_page?(controller: :users, action: :show, id: current_user) %>">
 					<img src="<%= current_user&.picture :small %>" class="w-5 h-5 rounded-full md:mr-5" alt="<%= current_user&.name %>">
 					Perfil
