--- a/web/app/views/components/_taste_button.html.erb
+++ b/web/app/views/components/_taste_button.html.erb
@@ -18,7 +18,7 @@
 <% if user %>
 	<% if taste_sentiment.to_sym == :positive %>
 		<div class="<%= class_names html.dig(:container, :css) || 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-600 items-center justify-center mdc-ripple-upgraded--unbounded rounded-full select-none tap-highlight-none text-gray-600 text-sm transform transition-transform',
-																{'bg-green-100': user.like?(resource)} %>"
+																{'bg-brand-100': user.like?(resource)} %>"
 				 data-action="click->cable-ready#perform"
 				 data-controller="cable-ready"
 				 data-cable-ready-perform="like"
@@ -35,7 +35,7 @@
 			<% end %>
 			<svg class="<%= class_names html.dig(:icon, :css) || 'fill-current h-5 hover:scale-150 w-5',
 																	{'text-gray-600':  !user.like?(resource),
-																	 'text-green-500': user.like?(resource)} %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+																	 'text-brand-500': user.like?(resource)} %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<path d="M0 0h24v24H0V0z" fill="none" opacity=".87"/>
 				<path d="M13.12 2.06L7.58 7.6c-.37.37-.58.88-.58 1.41V19c0 1.1.9 2 2 2h9c.8 0 1.52-.48 1.84-1.21l3.26-7.61C23.94 10.2 22.49 8 20.34 8h-5.65l.95-4.58c.1-.5-.05-1.01-.41-1.37-.59-.58-1.53-.58-2.11.01zM3 21c1.1 0 2-.9 2-2v-8c0-1.1-.9-2-2-2s-2 .9-2 2v8c0 1.1.9 2 2 2z"/>
 			</svg>
