--- a/web/app/views/events/_large_event.html.erb
+++ b/web/app/views/events/_large_event.html.erb
@@ -21,7 +21,7 @@
 				 data-share-button-text="<%= strip_tags(limit_description_size(event.details_description, 160)) %>"
 				 data-share-button-title="<%= event.details_name %>"
 				 data-share-button-url="<%= event_url(event, format: :html) %>">
-			<div class="relative flex px-3 py-2 mx-auto overflow-hidden text-sm text-gray-600 bg-gray-50 rounded-full shadow cursor-pointer ripple ripple-black hover:bg-white hover:text-green-500 w-content"
+			<div class="relative flex px-3 py-2 mx-auto overflow-hidden text-sm text-gray-600 bg-gray-50 rounded-full shadow cursor-pointer ripple ripple-black hover:bg-white hover:text-brand-500 w-content"
 					 data-action="click->share-button#share"
 					 data-controller="ripple">
 				<span>Compartilhar</span>
@@ -62,7 +62,7 @@
 		</h1>
 	</div>
 	<div class="flex p-5 border-t border-b border-gray-100">
-		<div class="flex flex-col justify-center px-3 py-2 my-auto mr-3 text-center text-green-500 bg-green-100 h-content rounded-xl w-content">
+		<div class="flex flex-col justify-center px-3 py-2 my-auto mr-3 text-center text-brand-500 bg-brand-100 h-content rounded-xl w-content">
 			<div class="font-bold leading-tight text-sm uppercase">
 				<% if event.day_of_week['date'] < Date.today + 7 %>
 					<%= I18n.l(event.day_of_week['date'], format: :week) %>
@@ -75,7 +75,7 @@
 		<div class="my-auto text-sm leading-snug text-gray-800">
 			O evento acontecerá
 			<span class="font-semibold">daqui <%= distance_of_time_in_words event.day_of_week['date'], DateTime.now %></span>
-			em uma <span class="font-semibold"><%= I18n.l(event.day_of_week['date'], format: :week) %></span>. <%= link_to('Ver minha agenda neste dia', my_agenda_path(start_date: event.day_of_week['date']), class: 'text-green-500 font-semibold') %>
+			em uma <span class="font-semibold"><%= I18n.l(event.day_of_week['date'], format: :week) %></span>. <%= link_to('Ver minha agenda neste dia', my_agenda_path(start_date: event.day_of_week['date']), class: 'text-brand-500 font-semibold') %>
 		</div>
 	</div>
 	<div class="px-5 py-5 border-b border-gray-100">
