--- a/web/app/views/friendships/_friendship_button.html.erb
+++ b/web/app/views/friendships/_friendship_button.html.erb
@@ -14,13 +14,13 @@
 			<span>Solicitar amizade</span>
 		</div>
 	<% elsif user.friendship_request_received? friend %>
-		<div class="flex items-center w-content justify-center px-2 py-1 text-sm font-medium text-green-500 bg-white border border-green-500 rounded cursor-pointer select-none tap-highlight-none"
+		<div class="flex items-center w-content justify-center px-2 py-1 text-sm font-medium text-brand-500 bg-white border border-brand-500 rounded cursor-pointer select-none tap-highlight-none"
 				 data-reflex="click->Friendship#friendship"
 				 data-reflex-root="#page"
 				 data-friend-id="<%= friend.id %>"
 				 data-friendship-action="accept"
 				 data-user-id="<%= user.id %>">
-			<svg class="w-5 mr-1 text-green-400 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+			<svg class="w-5 mr-1 text-brand-400 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 				<path d="M0 0h24v24H0z" fill="none"/>
 				<path d="M8 10H5V7H3v3H0v2h3v3h2v-3h3v-2zm10 1c1.66 0 2.99-1.34 2.99-3S19.66 5 18 5c-.32 0-.63.05-.91.14.57.81.9 1.79.9 2.86s-.34 2.04-.9 2.86c.28.09.59.14.91.14zm-5 0c1.66 0 2.99-1.34 2.99-3S14.66 5 13 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm6.62 2.16c.83.73 1.38 1.66 1.38 2.84v2h3v-2c0-1.54-2.37-2.49-4.38-2.84zM13 13c-2 0-6 1-6 3v2h12v-2c0-2-4-3-6-3z"/>
 			</svg>
@@ -40,17 +40,17 @@
 			<span>Amizade solicitada</span>
 		</div>
 	<% elsif user.friendship_accepted? friend %>
-		<div class="flex items-center w-content justify-center px-2 py-1 text-sm font-medium text-green-500 bg-green-100 rounded-full cursor-pointer select-none tap-highlight-none">
-			<svg class="w-5 mr-1 text-green-400 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+		<div class="flex items-center w-content justify-center px-2 py-1 text-sm font-medium text-brand-500 bg-brand-100 rounded-full cursor-pointer select-none tap-highlight-none">
+			<svg class="w-5 mr-1 text-brand-400 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 				<path d="M0 0h24v24H0z" fill="none"/>
 				<path d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"/>
 			</svg>
-			<span class="text-green-600">Amigos</span>
+			<span class="text-brand-600">Amigos</span>
 			<div data-reflex="click->Sheet#edit_sheets_friendships"
 					 data-reflex-root="#page"
 					 data-user-id="<%= user.id %>"
 					 data-friend-id="<%= friend.id %>">
-				<svg class="h-4 ml-1 -mr-1 text-green-400 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+				<svg class="h-4 ml-1 -mr-1 text-brand-400 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 					<path d="M0 0h24v24H0z" fill="none"/>
 					<path d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"/>
 				</svg>
