--- a/web/app/views/search/index.html.erb
+++ b/web/app/views/search/index.html.erb
@@ -29,7 +29,7 @@
 				<%= render MainSidebar::GroupByDayListComponent.new(events: @founded_events, user: current_user, open_in_sidebar: true) %>
 			<% else %>
 				<% if params[:q] %>
-					<h2 class="text-md m-5">Nenhum evento encontrado. <%= link_to 'Veja todos os eventos', feed_path, class: 'text-green-500' %>.</h2>
+					<h2 class="text-md m-5">Nenhum evento encontrado. <%= link_to 'Veja todos os eventos', feed_path, class: 'text-brand-500' %>.</h2>
 				<% end %>
 				<% if @categories.present? %>
 					<div class="mx-auto">
