--- a/web/app/views/sheets/friendships/_edit.html.erb
+++ b/web/app/views/sheets/friendships/_edit.html.erb
@@ -7,7 +7,7 @@
 				<div id="<%= dom_id(friend, :sheets_friendships_edit_action) %>" class="flex items-center space-x-5 font-medium">
 					<svg class="<%= class_names('fill-current h-6',
 																			{'text-gray-500':  user.friendship_accepted?(friend),
-																			 'text-green-400': !user.friendship_accepted?(friend)}) %>" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+																			 'text-brand-400': !user.friendship_accepted?(friend)}) %>" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 						<g>
 							<rect fill="none" height="24" width="24"/>
 						</g>
@@ -24,7 +24,7 @@
 							Cancelar amizade com <%= friend.first_name %>
 						</div>
 					<% else %>
-						<div class="text-green-500">
+						<div class="text-brand-500">
 							Amizade com <%= friend.first_name %> cancelada
 						</div>
 					<% end %>
