--- a/web/app/views/users/_form.html.erb
+++ b/web/app/views/users/_form.html.erb
@@ -27,15 +27,15 @@
 
 	<div class="text-gray-600">
 		<label class="font-medium">Nome</label>
-		<%= form.text_field :name, class: 'border focus:border-green-500 focus:outline-none focus:ring focus:ring-green-500 px-2 py-2 rounded shadow-sm w-full' %>
+		<%= form.text_field :name, class: 'border focus:border-brand-500 focus:outline-none focus:ring focus:ring-brand-500 px-2 py-2 rounded shadow-sm w-full' %>
 	</div>
 
 	<div class="text-gray-600">
 		<label class="font-medium">Nome de usuário (username)</label>
-		<%= form.text_field :slug, class: 'border focus:border-green-500 focus:outline-none focus:ring focus:ring-green-500 px-2 py-2 rounded shadow-sm w-full' %>
+		<%= form.text_field :slug, class: 'border focus:border-brand-500 focus:outline-none focus:ring focus:ring-brand-500 px-2 py-2 rounded shadow-sm w-full' %>
 	</div>
 
-	<button class="float-right px-5 py-2 antialiased font-semibold text-white bg-green-500 rounded-full">
+	<button class="float-right px-5 py-2 antialiased font-semibold text-white bg-brand-500 rounded-full">
 		Salvar
 	</button>
 
